--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css">
   <link rel="stylesheet" href="style.css">
   <title>Meal Finder</title>
 </head>
@@ -18,10 +18,9 @@
         <i class="fas fa-search"></i>
       </button>
     </form>
-
-    <button class="random-btn" id="random">
-      <i class="fas fa-random"></i>
-    </button>
+      <button class="random-btn" id="random">
+        <i class="fas fa-random"></i>
+      </button>
   </div>
 </div>
 
