add style to meals

--- a/index.html
+++ b/index.html
@@ -24,8 +24,8 @@
     </div>
 
     <div id="results-heading"></div>
-    <div id="meals"></div>
-    <div id="single-meal"></div>
+    <div class="meals" id="meals"></div>
+    <div class="single-meal" id="single-meal"></div>
   </div>
 
 
